# mlops-github-actions

./: LICENSE  Makefile  pyproject.toml
.github/workflows/: ci.yml
src/calculator/: operations.py
tests/: test_operations.py
